--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <h1>Види рослин</h1>
     <h2>Дерева</h2>
-    <img src="https://trends.24tv.ua/resources/photos/news/202202/1858093.jpg?v=1661256860000" alt="Зображення дерева">
+    <img src="img/derevo.jpg" alt="Зображення дерева" width="300" height="300">
     <h2>Кущі</h2>
-    <img src="https://pitomnik.kiev.ua/images/virtuemart/category/resized/xEuonymus-cat_0x320.jpg.pagespeed.ic.qWUsVMlxrE.jpg" alt="Зображення куща">
+    <img src="img/kushi.jpg" alt="Зображення куща">
   </body>
 </html>
